fixed rewards alignment

--- a/sections/Feedback.css
+++ b/sections/Feedback.css
@@ -30,7 +30,7 @@
     margin-left:6vmin;
     height: 15%;
     border-radius: 15px;
-    animation: bounce 1s infinite;
+    /* animation: bounce 1s infinite; */
 }
 
 @keyframes bounce {
